[Java IO] Address ArrowFlightIO review feedback